Correcoes nas traducoes e favicon

--- a/ilevus.Resources/Messages.resx
+++ b/ilevus.Resources/Messages.resx
@@ -882,4 +882,7 @@
   <data name="LabelSubject" xml:space="preserve">
     <value>Assunto</value>
   </data>
+  <data name="LabelCode" xml:space="preserve">
+    <value>Código</value>
+  </data>
 </root>
