--- a/ilevus.Resources/Messages.es.resx
+++ b/ilevus.Resources/Messages.es.resx
@@ -786,4 +786,7 @@
   <data name="ValidationPictureType" xml:space="preserve">
     <value>La foto debe ser un archivo PNG, GIF ou JPG</value>
   </data>
+  <data name="LabelState" xml:space="preserve">
+    <value>Estado</value>
+  </data>
 </root>
